--- a/vignettes/gwasCatSupplement.Rmd
+++ b/vignettes/gwasCatSupplement.Rmd
@@ -3,7 +3,17 @@ title: "gwasCatSupplement"
 author: "Robert Gentleman, Rafael Goncalves, Vince Carey"
 date: "`r Sys.Date()`"
 output: 
-  bookdown::html_document2: default
+  bookdown::html_document2: 
+    number_sections: false
+vignette: >
+  %\VignetteIndexEntry{Supplementary Material}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
+
+link-citations: true
+
+format: html
+
 ---
 
 ```{r setup, include=FALSE}
@@ -17,10 +27,10 @@ This repository provides a SQLite database designed to facilitate search for GWA
 The data were downloaded and processed according to the description in the GWASCatalogSearchDB,
 <https://github.com/ccb-hms/GWASCatalogSearchDB>.
 
+A schema of the resulting tables is given in Figure \@ref(fig:sqltabs).
 
-```{r sqltabls, echo=FALSE, fig.cap = "Table descriptions for GWAS catalog processed data."}
+```{r sqltabs, echo=FALSE, fig.cap = "Table descriptions for GWAS catalog processed data."}
 knitr::include_graphics("figure/GWASCat.png")
 ```
 
-A schema of the resulting tables is given in Figure \@ref{fig:sqltabs}.
 
