--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -46,6 +46,12 @@
   urldate = {2024-02-19}
 }
 
+@misc{cdc2024,
+  title = {National Health and Nutrition Examination Survey},
+  author = {{CDC}},
+  lastchecked = {2024}
+}
+
 @article{Cobalt,
   title = {Association of Blood Cobalt Concentrations with Dyslipidemia, Hypertension, and Diabetes in a {{US}} Population},
   author = {Wang, Hongxin and Li, Feng and Xue, Jianghua and Li, Yanshuang and Li, Jiyu},
